# ECG-agentic-AI

./: .env.example  .gitignore  README.md  pyproject.toml
splits/: valid.csv
src/: config.py  run_baseline.py  split.py  view_trace.py
src/agents/: __init__.py  base.py  conformal.py  coordinator.py  prompts.py
src/dataio/: __init__.py  loader.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/tools/: __init__.py  ecg_parser.py  guideline_lookup.py  risk_calculators.py
