[tool.poetry]
name = "ecg-agentic-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = ">=1.26.4"
pandas = ">=2.0.0,<3.0.0"
scipy = ">=1.10.0,<2.0.0"
torch = ">=2.0.0,<3.0.0"
transformers = ">=4.20.0,<5.0.0"
wfdb = ">=4.3.1,<5.0.0"
scikit-learn = ">=1.3.0,<2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
